# tagger

./: AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  tagger.ini
src/tagger/: __init__.py  cli.py  config.py  dataset.py  logging_utils.py  network.py  slow_utils.py  utils.py
src/tagger/representation/: postags.py  qonehotchars.py
tagger/: __init__.py
